--- a/css/partials/_header.scss
+++ b/css/partials/_header.scss
@@ -20,7 +20,8 @@ header {
 
 #site-title {
     font-size: 1.5rem;
-    place-self: stretch;
+    justify-self: stretch;
+    align-self: center;
     text-align: left;
     @include titleFont();
     transition: 0.2s ease;
